--- a/Web/APS.Web.MVC/Views/Account/LogIn.cshtml
+++ b/Web/APS.Web.MVC/Views/Account/LogIn.cshtml
@@ -2,8 +2,8 @@
 
 
 <h2>Вход в приложение</h2>
-<form method="post" asp-controller="Account" asp-action="Login"
-      asp-route-returnUrl="@Model.ReturnUrl">
+<h3>Добрый день! Если хотите войти в приложение, то введите свои учётные данные для входа в систему</h3>
+<form method="post" asp-controller="Account" asp-action="Login">
     <div asp-validation-summary="ModelOnly"></div>
     <div>
         <label asp-for="Email"></label><br />
@@ -21,5 +21,11 @@
     </div>
     <div>
         <input type="submit" value="Войти" />
+    </div>
+
+    <div>
+        <br />
+        <h3>Нет учётной записи? Тогда создайте её!</h3>
+        <a asp-action="Register">Зарегистрироваться</a>
     </div>
 </form>
