--- a/Web/APS.Web.MVC/Views/_ViewImports.cshtml
+++ b/Web/APS.Web.MVC/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using APS.Web.MVC
 @using APS.Web.MVC.Models
+@using APS.CMS.Application.Publications.Commands.CreatePublication
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
