#20 Добавил страницу входа в систему

--- a/Web/APS.Web.MVC/Views/Shared/_Layout.cshtml
+++ b/Web/APS.Web.MVC/Views/Shared/_Layout.cshtml
@@ -24,11 +24,16 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Register">Register</a>
-                        </li>
                     </ul>
                 </div>
+                <div>
+                   <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="LogIn">Login</a>
+                </div>
+                <form method="post" asp-controller="Account" asp-action="LogOut">
+                    <div>
+                        <input type="submit" , value="Выйти из системы" />
+                    </div>
+                </form>
             </div>
         </nav>
     </header>
