--- a/Web/APS.Web.MVC/Views/Account/LogIn.cshtml
+++ b/Web/APS.Web.MVC/Views/Account/LogIn.cshtml
@@ -3,12 +3,12 @@
 
 <h2>Вход в приложение</h2>
 <h3>Добрый день! Если хотите войти в приложение, то введите свои учётные данные для входа в систему</h3>
-<form method="post" asp-controller="Account" asp-action="Login">
+<form method="post" asp-controller="Account" asp-action="LoginUser">
     <div asp-validation-summary="ModelOnly"></div>
     <div>
-        <label asp-for="Email"></label><br />
-        <input asp-for="Email" />
-        <span asp-validation-for="Email"></span>
+        <label asp-for="Login"></label><br />
+        <input asp-for="Login" />
+        <span asp-validation-for="Login"></span>
     </div>
     <div>
         <label asp-for="Password"></label><br />
@@ -16,7 +16,7 @@
         <span asp-validation-for="Password"></span>
     </div>
     <div>
-        <label asp-for="RememberMe"></label><br />
+        <label asp-for="RememberMe"></label>
         <input asp-for="RememberMe" />
     </div>
     <div>
