#17 Добавил функцию скачивания файла

--- a/Web/APS.Web.MVC/Views/_ViewImports.cshtml
+++ b/Web/APS.Web.MVC/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using APS.Web.MVC
 @using APS.Web.MVC.Models
 @using APS.CMS.Application.Publications.Commands.CreatePublication
+@using APS.CMS.Application.Publications.Commands.DownloadPublication
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
