--- a/Web/APS.Web.MVC/Views/Publications/DownloadPublication.cshtml
+++ b/Web/APS.Web.MVC/Views/Publications/DownloadPublication.cshtml
@@ -2,19 +2,6 @@
 
 
 <h2>Скачивание файла</h2>
-<form method="post" asp-controller="Publications" asp-action="DownloadPublications" enctype="multipart/form-data">
+<form method="get" asp-controller="Publications" asp-action="DownloadPublications" enctype="multipart/form-data">
 
-    <div>
-        <label asp-for="FileName"></label><br />
-        <input asp-for="FileName" />
-        <span asp-validation-for="FileName"></span>
-    </div>
-    <div>
-        <label asp-for="IsPublic"></label><br />
-        <input asp-for="IsPublic" />
-    </div>
-    <div>
-        <input type="file" asp-for="UploadFile" /><br>
-        <input type="submit" value="Загрузить" />
-    </div>
 </form>
