--- a/Web/APS.Web.MVC/Views/_ViewImports.cshtml
+++ b/Web/APS.Web.MVC/Views/_ViewImports.cshtml
@@ -2,4 +2,5 @@
 @using APS.Web.MVC.Models
 @using APS.CMS.Application.Publications.Commands.CreatePublication
 @using APS.CMS.Application.Publications.Commands.DownloadPublication
+@using APS.CMS.Application.Publications.Queries.GetPublicationById
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
