--- a/Web/APS.Web.MVC/Views/Publications/DownloadPublication.cshtml
+++ b/Web/APS.Web.MVC/Views/Publications/DownloadPublication.cshtml
@@ -2,6 +2,6 @@
 
 
 <h2>Скачивание файла</h2>
-<form method="get" asp-controller="Publications" asp-action="DownloadPublications" enctype="multipart/form-data">
+<form method="get" asp-controller="Publications" asp-action="DownloadPublication" enctype="multipart/form-data">
 
 </form>
