--- a/Web/APS.Web.MVC/Views/Publications/UploadPublication.cshtml
+++ b/Web/APS.Web.MVC/Views/Publications/UploadPublication.cshtml
@@ -2,7 +2,7 @@
 
 
 <h2>Загрузка файла</h2>
-<form method="post" asp-controller="Publications" asp-action="CreatePublications" enctype="multipart/form-data">
+<form method="post" asp-controller="Publications" asp-action="CreatePublication" enctype="multipart/form-data">
 
     <div>
         <label asp-for="FileName"></label><br />
